# Quack

./: .gitignore  Cargo.toml  README.md  TASK.md  openapi.yaml
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/db/: migrations.rs  pool.rs
backend/src/routes/: followup.rs  history.rs  metrics.rs  mod.rs  settings.rs
backend/src/services/: context.rs  llm.rs  metrics.rs  mod.rs  session.rs  settings.rs
frontend/: package.json
frontend/scripts/: smoke-test.js
frontend/src/: app.tsx  cli.tsx  store.ts
frontend/src/components/: CodeBlock.tsx  ErrorOutput.tsx  Header.tsx  HistoryView.tsx  InputPrompt.tsx  SessionDetail.tsx  SettingsView.tsx  SolutionBlock.tsx  StreamingText.tsx
frontend/src/types/: api.ts
frontend/src/utils/: markdown.test.ts  markdown.ts
scripts/: build.sh  e2e-smoke.sh  install.sh
src/: context.rs  groq.rs  main.rs  shell.rs  tui.rs
