[package]
name = "quack"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
ratatui = "0.20"
crossterm = "0.26"
futures-util = "0.3"
tokio-stream = "0.1"
