[package]
name = "quack-server"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
futures-util = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
